Fixed dropdown icon whitespace below menu

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ nav {
 }
 
 main {
-    margin-top: 266px;
+    margin-top auto:
 }
 .greenBackGroundMain {
     background: rgba(171, 250, 171, 0.9);
